[metadata]
name = postgkyl
version = 1.7.1.dev
description = Python library and command-line tool for postprocessing (not only) Gkeyll data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ammarhakim/postgkyl
author = file: AUTHORS.md
author_email = ahakim@pppl.gov
maintainer = Gkeyll development team
maintainer_email = ahakim@pppl.gov
license = MIT
license_files = LICENSE
platforms =
    Any
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
project_urls =
    Bug Tracker = https://github.com/ammarhakim/postgkyl/issues

[options]
packages = find:
install_requires =
    numpy>=1.26.4
    matplotlib>=3.8.0
    click>=8.1.7
    adios2>=2.9.2
    tables>=3.9.2
    scipy>=1.11.4
    sympy>=1.12
    msgpack>=1.0.3
python_requires >= 3.11
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pgkyl = postgkyl.pgkyl:cli